[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "quattro"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["description", "version"]
requires-python = ">=3.9"
dependencies = [
    "attrs",
    "exceptiongroup; python_version < '3.11'",
    "taskgroup; python_version < '3.11'",
    "typing_extensions; python_version < '3.11'",
]
readme = "README.md"

[dependency-groups]
test = [
    "pytest-asyncio>=0.20.3",
    "coverage",
]
lint = [
    "black",
    "mypy>=0.991",
    "ruff>=0.0.272",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
]

[tool.mypy]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "asyncio.taskgroups"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "exceptiongroup"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
parallel = true
source_pkgs = ["quattro"]
branch = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez
    "PGH", # pygrep-hooks
    "PLC", # Pylint
    "PIE", # flake8-pie
    "RUF", # ruff
    "I",   # isort
    "T20", # flake8-print
]
ignore = [
    "S101",   # assert
    "S301",   # pickle in tests
    "PGH003", # leave my type: ignores alone
]

[tool.coverage.report]
exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }
